# nocode

./: .gitignore  ENV_SETUP.md  README.md  agent.py  config.py  main.py  nocode_test.sh  pyproject.toml  requirements.txt  tools.py  ui.py
nocode/: agent.py  config.py  diff.py  main.py  parser.py  permissions.py  tools.py  ui.py
nocode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
nocode/defaults/: default_env  default_env_colors
